--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "keywords": [
     "react-native",
     "reactjs",
-    "reactnative"
+    "reactnative",
+    "ui"
   ],
   "scripts": {
     "build": "tsc",
@@ -22,7 +23,21 @@
     "changelog": "auto-changelog -p",
     "prepare": "rimraf dist && tsc"
   },
-  "author": "ahmnouira",
+  "author": {
+    "name": "Ahmed Nouira",
+    "email": "ahmnouira@gmail.com",
+    "url": "https://github.com/ahmnouira"
+  },
+  
+  "bugs": {
+    "url": "https://github.com/ahmnouira/react-native-innovant/issues"
+  },
+  "repository": {
+    "url": "https://github.com/ahmnouira/react-native-innovant.git",
+    "type": "git"
+  },
+  "readme": "https://github.com/ahmnouira/react-native-innovant.git#readme",
+  "homepage": "https://github.com/ahmnouira/react-native-innovant/",
   "license": "MIT",
   "devDependencies": {
     "@testing-library/react-native": "^7.2.0",
@@ -37,12 +52,13 @@
     "react": "^17.0.2",
     "react-native": "^0.64.2",
     "react-native-simple-toast": "^1.1.3",
+    "react-native-snackbar-component": "^1.1.11",
+    "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "react-native-snackbar-component": "^1.1.11",
-    "react-test-renderer": "^17.0.2"
+    "auto-changelog": "^2.3.0"
   }
 }
