--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "format:fix": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\"",
     "test:ci": "jest --runInBand",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "prettify": "prettier --single-quote --trailing-comma=es5 --write './**/*.md'",
     "clean-install": "rimraf node_modules && yarn",
@@ -41,6 +42,7 @@
     "@types/jest": "26.0.24",
     "@types/react": "17.0.16",
     "@types/react-native": "0.64.12",
+    "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-test-renderer": "17.0.1",
     "babel-jest": "27.0.6",
     "eslint": "7.32.0",
@@ -48,8 +50,10 @@
     "prettier": "2.3.2",
     "react": "^17.0.2",
     "react-native": "^0.64.2",
+    "react-native-device-info": "^8.1.7",
     "react-native-simple-toast": "1.1.3",
     "react-native-snackbar-component": "1.1.11",
+    "react-native-vector-icons": "^8.1.0",
     "react-test-renderer": "^17.0.2",
     "rimraf": "3.0.2",
     "ts-node": "10.1.0",
