--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "@types/jest": "26.0.24",
     "@types/react": "17.0.16",
     "@types/react-native": "0.64.12",
-    "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-test-renderer": "17.0.1",
+    "auto-changelog": "^2.3.0",
     "babel-jest": "27.0.6",
     "eslint": "7.32.0",
+    "husky": "^7.0.1",
     "jest": "27.0.6",
+    "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "2.3.2",
     "react": "^17.0.2",
     "react-native": "^0.64.2",
@@ -60,7 +62,10 @@
     "typescript": "4.3.5"
   },
   "dependencies": {
-    "auto-changelog": "^2.3.0"
+    "@types/react-native-vector-icons": "^6.4.8"
+  },
+  "peerDependencies": {
+    "react-native-vector-icons": ">7.0.0"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
