--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
     "tabWidth": 2,
     "useTabs": false, 
     "printWidth": 120, 
-    "semi": true, 
+    "semi": false, 
     "singleQuote": true, 
     "trailingComma": "es5", 
     "jsxBracketSameLine": true, 
