--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "license": "MIT",
   "devDependencies": {
     "@testing-library/react-native": "7.2.0",
+    "@types/faker": "^5.5.7",
     "@types/jest": "26.0.24",
     "@types/react": "17.0.16",
     "@types/react-native": "0.64.12",
