--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,12 @@
 language: node_js
+node_js:
+  - 10
+  - 9
+  - 8
+  - 7
+  - 6
+install:
+  - npm install
+script:
+  - npm test:coverage
+  - codecov -f coverage/*.json
