--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-test-renderer": "17.0.1",
     "auto-changelog": "^2.3.0",
     "babel-jest": "27.0.6",
+    "codecov": "^3.8.3",
     "eslint": "7.32.0",
     "faker": "^5.5.3",
     "husky": "^7.0.1",
