--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,4 @@
 github: [ahmnouira]
-custom: ['https://www.buymeacoffee.com/ahmnouira']
+ko_fi: ahmnouira
+custom: ["https://www.paypal.com/paypalme/ahmnouira"]
+
